--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -5,7 +5,7 @@ Wie in Kapitel ~\ref{subsec_2.1.1} bereits erwähnt, ist der Zweck von Gewalt, M
 Es lassen sich dabei zwei Muster identifizieren. Ein \textit{spontanes Konfliktverhalten}, oder auch \textit{situative Gewalt} gennant, kann einmalig, aber auch regelmäßig stattfinden und hat die Funktion einer negativen Stressbewältigung. Durch fehlende Ressourcen sehen die gewalttätigen Personen nur Gewalt als einzige Lösung, um ein Konflikt zu lösen. Ein solches Gewaltmuster ist sowohl bei Männern sowieauch bei Frauen zu finden. Das Motiv von Macht und Kontrolle ist jedoch in diesen Fällen nicht ausschlaggebend. Dieses Verhaltensmuster kann sich hingegen in langanhaltendes \textit{systematisches Gewalt- und Kontrollverhalten} verwandeln. Hier haben Macht und Kontrolle eine große Rolle. In diesen Fällen existiert die Absicht den Gegenüber zu kontrollieren und ein langanhaltendes Gefühl von Macht zu verspühren. Dieses Verhalten ist vermehrt bei Männer vorzufinden, die sich in einer ungleichen Beziehung befinden. Um dieses Gefühl von Macht und Kontrolle zu verspüren greifen sie auf entwürdigendes und machtmissbrauchendes Verhalten zurück \parencite{Def_Form_Folge_Gewalt}.
 
 Gewalt lässt sich in drei Kategorien aufteilen, orientiert an der gewaltausübenden Person. Diese Unterteilungen lassen sich in weitere Subgruppierungen teilen. 
-\begin{enumerate}
+\begin{enumerate} [leftmargin=1.25cm] 
     \item Die \textit{selbstgerichtete Gewalt} beinhaltet suizidales Verhalten sowieGedanken an Suizid und Versuche dessen, sowie die erfolgreiche Vollendung solcher Versuche. Der zweite Bestandteil dieser Gewalt ist die Selbstmisshandlung \parencite{Gewaltarten_WHO}. 
     \item Auch die \textit{zwischenmenschliche Gewalt} lässt sich in zwei Unterkategorien aufteilen. Die Gesellschaftsgewalt erfolgt zwischen Personen, die nicht miteinander verwandt sind und die sich möglicherweise nicht kennen und erfolgt demzufolge meist in der Öffentlichkeit. Ein weit bekanntes Beispiel für solche Gewalt ist die Vergewaltigung oder die sexuelle Nötigung durch Fremde. Sie umfasst aber auch zufällige Gewaltausübungen oder die Gewalt innerhalb Institutionen wie der Schule, Arbeit, Gefängnissen oder Alten- und Pflegeheimen. Die zweite Untergruppe, und die im Rahmen dieser Arbeit die Wichtigere, ist die Familien- und speziell die Partnerschaftsgewalt \parencite{Gewaltarten_WHO}. Diese Unterkategorie der interpersonellen Gewalt entspricht der bereits zuvor erwähnten häuslichen Gewalt. Die dabei involvierten Personenkonstellationen können unter anderem Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft. 
     \item Die dritte und letzte Kategorie ist die \textit{kollektive Gewalt}, welche sich in soziale, politische und wirtschaftliche Gewalt unterteilen lässt. Diese Unterkategorien zeigen im Gegensatz zu den vorherigen Kategorien mögliche Gründe für die Gewalt durch Staaten oder großen Gruppen an Einzelpersonen. Das gruppale Hassreden auf sozialen Medien ist ein Beispiel für eine sozial motivierte kollektive Gewalt. Für politische Gewalt ist Krieg ein sehr prominentes Beispiel. Gewalthandlungen größerer Gruppen mit dem Ziel eines wirtschaftlichen Gewinns sind Bestandteil der wirtschaftlichen Gewalt. Gewalthandlungen durch größere Gruppen können stehts mehrere Motive haben \parencite{Gewaltarten_WHO}.
@@ -47,7 +47,7 @@ Auf der höchsten Ebene liegt die \textit{Gesellschaft}. Durch ihre sozialen und
 
 Da die eben beschriebenen Einflüsse auf die Entstehung von häuslicher Gewalt mit dem Beginn der Gewalt sich nicht plötzlich ändern und entfallen, entwickelt sich die häusliche Gewalt häufig zu einem immer wiederkehrenden Kreislauf. Dieser beinhaltet die folgenden drei zusammenhängenden Zyklen: 
 
-\begin{enumerate}
+\begin{enumerate} [leftmargin=1.25cm] 
     \item Spannungsaufbau
     \item Gewaltausbruch
     \item Reue, Entschuldigungs- und Entlastungsversuche
@@ -74,5 +74,5 @@ Zusammen mit einem möglichen Arbeitsplatzwechsel und dem verringertem Selbstwer
 Abschließend ist jedoch zu sagen, dass eine solche Entwicklung nicht in jedem Falle zu stande kommen muss. Wie in vielen Bereichen sind mehrere Faktoren involviert. Die Intensität und Art der Gewalt, wie auch die persönlichen Ressourcen und das Verhältnis zum Täter beeinflussen die Realität und Zukunft der Opfer \parencite{Def_Form_Folge_Gewalt}.
 
 \subsubsection{Istambul Konvention}     \label{2.1.2.4}
-Die Istambul Konvention \parencite{Istambul_Konvention} wurde 2011 vom Europarat konzipiert und hat als Grundsatz \enquote{Frauen vor allen Formen von Gewalt zu schützen und Gewalt gegen Frauen und häusliche Gewalt zu verhüten, zu verfolgen und zu beseitigen} (S. 4). % Seitenzahl hinzufügen: S. 4
+Die Istambul Konvention \parencite{Istambul_Konvention} wurde vom Europarat konzipiert und hat als Grundsatz \enquote{Frauen vor allen Formen von Gewalt zu schützen und Gewalt gegen Frauen und häusliche Gewalt zu verhüten, zu verfolgen und zu beseitigen} (S. 4). % Seitenzahl hinzufügen: S. 4
 Die vorliegende Arbeit dient der Bewusstseinsbildung udn erfüllt somit Artikel 13 der Istambul Konvention \parencite{Istambul_Konvention}.
