--- a/2 Theorie/2.1.3 Gewaltmythen.tex
+++ b/2 Theorie/2.1.3 Gewaltmythen.tex
@@ -14,7 +14,7 @@ Der vierte und letzte Typ dient der Rechtfertigung der Tat, denn die betroffene 
 
 
 \subsubsection{Victim Blaming}     \label{2.1.3.2}
-Ein großer Bestandteil dieser Gewaltmythen ist das \textit{Victim Blaming}. Unter diesem Begriff fällt die Überzeugung einer Person, egal ob Beobachter, Aggressor, oder Opfer, dass die betroffene Person die Verantwortung für die gegebene Lage trägt. In ihren Augen scheint das Opfer nicht schuldlos zu sein. Individuen, die Victim Blaming betreiben, rechtfertigen ihre Verantwortungszuschreibung mit Sätzen, wie: \textit{Sie will doch von ihm dominiert werden}. Oder Sätze wie: \textit{Wenn sie ihn so eifersüchtig macht, dann ist es normal, wenn er so reagiert} \parencite{Peters2003}. \textcite{victim_blaming} greift zwei Aspekte auf, die die Beurteilung eines Opfers beeinflussen können: Die Beziehung zu ihrem Aggressor und die schwierige Kooperation mit der Polizei. Die Zusammenarbeit mit dem Justizsystem ist erschwert, da die betroffene Person in vielen Fällen eine enge emotionale und finanzielle Bindung mit dem Täter hat. Ein weiterer Grund für die heruasfordernde Zusammenarbeit können die gemeinsamen Kinder des Opfers und Aggressors sein \parencite{victim_blaming}. Im nachfolgenden Kapitel ~\ref{2.1.3.2} werden weitere Gründe aufgegriffen, die zum Victim Blaming führen können.
+Ein großer Bestandteil dieser Gewaltmythen ist das \textit{Victim Blaming}. Unter diesem Begriff fällt die Überzeugung einer Person, egal ob Beobachter, Aggressor, oder Opfer, dass die betroffene Person die Verantwortung für die gegebene Lage trägt. In ihren Augen scheint das Opfer nicht schuldlos zu sein. Individuen, die Victim Blaming betreiben, rechtfertigen ihre Verantwortungszuschreibung mit Sätzen, wie: \textit{Sie will doch von ihm dominiert werden}. Oder Sätze wie: \textit{Wenn sie ihn so eifersüchtig macht, dann ist es normal, wenn er so reagiert} \parencite{Peters2003}. \textcite{victim_blaming} greift zwei Aspekte auf, die die Beurteilung eines Opfers beeinflussen können: Die Beziehung zu ihrem Aggressor und die schwierige Kooperation mit der Polizei. Die Zusammenarbeit mit dem Justizsystem ist erschwert, da die betroffene Person in vielen Fällen eine enge emotionale und finanzielle Bindung mit dem Täter hat. Ein weiterer Grund für die heruasfordernde Zusammenarbeit können die gemeinsamen Kinder des Opfers und Aggressors sein \parencite{victim_blaming}. Das kann dazu führen, dass sie nicht alle oder keine Informationen den entsprechenden Personen mitteilt. Im nachfolgenden Kapitel ~\ref{2.1.3.2} werden weitere Gründe aufgegriffen, die zum Victim Blaming führen können.
 
 
 \subsubsection{Theorien zur Erklärung von Victim Blaming}     \label{2.1.3.3}
