--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -20,7 +20,7 @@ Bei der H2 wurde eine positive Korrelation zwischen Aggression und der Akzeptanz
 Von einer moderierenden Rolle des biologischen Geschlechts des Probanden auf den Zusammenhang zwischen Aggression und der Akzeptanz der Mythen häuslichen Gewalt, wurde bei der H3 ausgegangen. Bei der Überprüfung der Voraussetzungen kam der White-Test zu einem signifikanten Ergebnis, was für eine Heteroskedastizität spricht. Die weiteren Voraussetzungen waren gegeben. Das Gesamtmodell der Moderation war signifikant, jedoch zeigte die Interaktion der drei Variablen ein nicht signifikantes Ergebnis. Die Nullhypothese musste demzufolge angenommen werden. Das Geschlecht hatte keine moderierende Auswirkung auf den Zusammenhang von Aggression und der Akzeptanz der Gewaltmythen. Des Weiteren wurde überprüft, ob die beiden Prädiktoren Einfluss auf das Kriterium haben. Die Regressionsanalyse zeigte für das Geschlecht und die Aggression ein signifikantes Ergebnis. Beide Variablen beeinflussten demzufolge die Akzeptanz der Mythen häuslicher Gewalt.
 
 % explorative Ergebnisse
-Die erste Post$-$hoc Analysen diente der weiteren Untersuchung der Korrelation von Aggression, der Verantwortungszuschreibung und der Akzeptanz der Mythen häuslicher Gewalt. Die Analyse erforschte die Korrelation zwischen den Aggression$-$Subskalen physische Aggression, verbale Aggression, Ärger und Misstrauen untereinander und jeweils mit dem DVMAS und Victim Blaming. Sie kam mit erfüllten Voraussetzungen zu signifikanten Ergebnissen. Die vier Subskalen korrelierten signifikant und mit einem mittelgroßen Effekt untereinander und mit einem schwachen Effekt mit der DVMAS. Alle vier Subskalen wiesen schwache Korrelation mit der Verantwortungszuschreibung auf das Opfer auf. Es zeigte sich, dass ausschließlich die physische Aggression signifikant mit der Verantwortungszuschreibung auf das Opfer korreliert.
+Die Post$-$hoc Analysen diente der weiteren Untersuchung der Korrelation von Aggression, der Verantwortungszuschreibung und der Akzeptanz der Mythen häuslicher Gewalt. Die Analyse erforschte die Korrelation zwischen den Aggression$-$Subskalen physische Aggression, verbale Aggression, Ärger und Misstrauen untereinander und jeweils mit dem DVMAS und Victim Blaming. Sie kam mit erfüllten Voraussetzungen zu signifikanten Ergebnissen. Die vier Subskalen korrelierten signifikant und mit einem mittelgroßen Effekt untereinander und mit einem schwachen Effekt mit der DVMAS. Alle vier Subskalen wiesen schwache Korrelation mit der Verantwortungszuschreibung auf das Opfer auf. Es zeigte sich, dass ausschließlich die physische Aggression signifikant mit der Verantwortungszuschreibung auf das Opfer korreliert.
 
 
 \section{Einordnung und Diskussion der Befunde}     \label{sec_5.2}
